1.1.2 2012-XX-XX Hiroshi Sendai

Not yet released.

Summary

- API has not changed from 1.1.1.
- Fix return value of writeAll() when EPIPE error occured.
- Fix a bug that firefox sends SYN packet every time we click the buttons.
- Fix a bug that progname was not defined in run.py.
- Add daqcom utility to communicate with httpd server in command line.

Details

BUG FIX: Sock.cpp writeAll() did not return ERROR_FATAL
         when EPIPE error occured.
BUG FIX: Firefox had sent SYN  packets every time we click the buttons.
         This behavior caused huge memory consumption and we could not get
         any feedback when we click buttons.
BUG FIX: We did not define progname that is used in error message.
FEATURE: Add daqcom utility.  You can commiucate with httpd server by using
         this command.  Use daqcom --help to get usage.

1.1.1 2011-12-01 Hiroshi Sendai

Summary

- API has not changed from 1.1.0.
- Update Developer's Manual.
- Fix memory leaks on DaqOperatorComp.
- Sock library UDP part bug fix.
- Add -O option to run.py (specify log file when run in Web mode).
- sleep time in daq_base_dummy() (this method is called when the component
  is in LOADED, CONFIGURED, and UNCONFIGURED) is reduced to 10 m sec.
  To incorporate this fix, users have to recompile their components.

Details

BUG FIX: UPD part of Socket library was not set properly.  This bug does not
         affect on Socket TCP library.
BUG FIX: There were several memory leaks on DaqOperatorComp.
BUG FIX: sleep time in daq_base_dummy() (was 1 second) caused ParameterClient.h
         timeout.  

1.1.0 2011-06-17 Hiroshi Sendai

Summary

- Add x86_64 architecture support.
- API changes: set_footer() and check_footer() are now has one argument
  for footer buffer.  All users have to rewrite their source code if you
  use set_footer() and check_footer().  To use new API, remove second
  argument of set_footer() and check_footer and re-compile the components.